# mark-danlu-OS

./: .gitignore  CLAUDE.md
炉/: .env.example  .gitignore  CLAUDE.md  MEMORY.md  README.md  pyproject.toml
炉/config/: style_profile.yaml
炉/config/thinking_models/: frameworks.yaml  models.yaml
炉/docs/: 00-PROJECT-OVERVIEW.md  01-PRD.md  02-ARCHITECTURE.md  03-MODULE-DESIGN.md  04-DATA-MODEL.md  05-DEV-CONVENTIONS.md  06-DEV-PLAN.md  07-TEST-PLAN.md  08-DEPLOY.md  09-ROADMAP-V2.md  10-LONG-TERM-PLAN.md  11-PROGRESS.md  12-DECISION-LOG.md  13-MILESTONES.md  14-TASKS.md  15-ISSUES.md  16-RELEASE-CHECKLIST.md  17-TECH-DEBT.md  99-LESSONS-LEARNED.md
炉/tests/: conftest.py  test_blueprint_anchors.py  test_blueprint_designer.py  test_blueprint_embedding.py  test_blueprint_models.py  test_blueprint_sections.py  test_cli_config.py  test_cli_embedding.py  test_cli_feedback.py  test_cli_feishu_feedback.py  test_cli_integration.py  test_cli_interactive.py  test_cli_model.py  test_cli_run.py  test_cli_run_provider.py  test_cli_viral.py  test_config_loader.py  test_critic.py  test_custom_model_store.py  test_data_migration.py  test_draft_generator.py  test_draft_models.py  test_draft_section_prompt.py  test_embedding_chain.py  test_embedding_factory.py  test_embedding_hook.py  test_embedding_index.py  test_embedding_providers.py  test_embedding_recall.py  test_embedding_types.py  test_feedback_store.py  test_feishu_client.py  test_feishu_feedback_sink.py  test_feishu_local_sink.py  test_feishu_style_profile.py  test_file_store.py  test_ingest_article.py  test_llm_chain.py  test_llm_provider.py  test_mode_config.py  (+32 more)
(+874 files in other folders)
